--- a/6.1 Achievement.ipynb
+++ b/6.1 Achievement.ipynb
@@ -37,19 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   
+    "path = r'Desktop/Data Sets/NYPD_Arrests_Data__Historic_.csv'"
    ]
-  },path = r'Desktop/Data Sets/NYPD_Arrests_Data__Historic_.csv'
+  },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f0cb2b40-0667-43f2-bd53-21538aa31881",
+   "execution_count": null,
+   "id": "2afbcca6-4e0a-4130-94d0-4a68e415d305",
    "metadata": {},
-   "outputs": [
-    {
-     
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(os.path.join(path), index_col = False) "
    ]
